--- a/Shop Management/nbproject/project.properties
+++ b/Shop Management/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Shop_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=mysql-connector-java-5.1.40-bin.jar
+file.reference.rs2xml.jar=rs2xml.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
